--- a/client/Frontend/.env.development
+++ b/client/Frontend/.env.development
@@ -1,35 +1,19 @@
-# #Client
-# VITE_CLIENT_URL: http://10.11.5.11:${VITE_CLIENT_PORT}
-# VITE_CLIENT_PORT: 5173
-# #
+#Client
+VITE_HTTP_CLIENT: http://localhost
+VITE_CLIENT_URL: http://localhost:${VITE_CLIENT_PORT}
+VITE_CLIENT_PORT: 5173
 #
-# #Server
-# VITE_SERVER_URL: http://10.11.5.11:${VITE_SERVER_PORT}
-# VITE_SERVER_SOCKET_URL: ws://10.11.5.11:${VITE_SERVER_PORT}
-# VITE_SERVER_PORT: 3000
-# #
-#
-# #WebSockets
-# VITE_GAME_SOCKET_URL: ws://10.11.5.11:${VITE_SERVER_PORT}/game
-# VITE_NOTIFICATION_SOCKET_URL: ws://10.11.5.11:${VITE_SERVER_PORT}/notification
-# VITE_CHATDIRECT_SOCKET_URL: ws://10.11.5.11:${VITE_SERVER_PORT}/Direct-Chat
-# VITE_CHATROOM_SOCKET_URL: ws://10.11.5.11:${VITE_SERVER_PORT}/Rooms-Chat
-# #
-# ##
 
-VITE_HTTP_CLIENT: localhost
-VITE_CLIENT_URL: localhost:${VITE_CLIENT_PORT}
-VITE_CLIENT_PORT: 8080
-#
+VITE_SERVER: http://161.35.172.194
+VITE_SERVER_SOCKET_URL: ws://161.35.172.194
+VITE_SERVER_PORT: 3000
 
 #Server
-VITE_SERVER_URL: server:${VITE_SERVER_PORT}
-VITE_SERVER_SOCKET_URL: ws://server:${VITE_SERVER_PORT}
-VITE_SERVER_PORT: 3000
+VITE_SERVER_URL: ${VITE_SERVER}:${VITE_SERVER_PORT}
 #
 
 #WebSockets
-VITE_GAME_SOCKET_URL: ws://server:${VITE_SERVER_PORT}/game
-VITE_NOTIFICATION_SOCKET_URL: ws://server:${VITE_SERVER_PORT}/notification
-VITE_CHATDIRECT_SOCKET_URL: ws://server:${VITE_SERVER_PORT}/Direct-Chat
-VITE_CHATROOM_SOCKET_URL: ws://server:${VITE_SERVER_PORT}/Rooms-Chat
+VITE_GAME_SOCKET_URL: ${VITE_SERVER_SOCKET_URL}:${VITE_SERVER_PORT}/game
+VITE_NOTIFICATION_SOCKET_URL: ${VITE_SERVER_SOCKET_URL}:${VITE_SERVER_PORT}/notification
+VITE_CHATDIRECT_SOCKET_URL: ${VITE_SERVER_SOCKET_URL}:${VITE_SERVER_PORT}/Direct-Chat
+VITE_CHATROOM_SOCKET_URL: ${VITE_SERVER_SOCKET_URL}:${VITE_SERVER_PORT}/Rooms-Chat
