--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,8 @@ networks:
 volumes:
   database:
     name: database
+  images:
+    name: images 
 
 services:
 
@@ -31,6 +33,8 @@ services:
         published: 3000
     networks: 
       - internalNet
+    volumes:
+      - images:/home/Backend/upload/
     depends_on:
       postgres:
         condition: service_started
